resources/app-sre/unleash-production/unleash.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: app-interface
  name: unleash
spec:
  host: app-interface.unleash.devshift.net
  to:
    kind: Service
    name: app-interface
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
